--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -2,7 +2,7 @@
 {% extends 'admin/base.html' %}
 {% load static %}
 {% block responsive %}
-<link rel="stylesheet" href="{% static 'css/responsadmin.css' %}">
+<link rel="stylesheet" href="{% static 'css/responsive-admin.css' %}">
 {% endblock %}
 {% block extrahead %}
 
