--- a/store_bag/templates/store_bag/bag.html
+++ b/store_bag/templates/store_bag/bag.html
@@ -17,14 +17,13 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 class="logo-font mb-4"></h2>
+            <h2 class="logo-font mb-4">Bookings</h2>
             <hr>
         </div>
     </div>
     
     <div class="row">
         <div id="bag-parent" class="col">
-            {{bag_items}}
             {% if bag_items %}
             
            
@@ -32,7 +31,8 @@
                 <table class="table table-sm table-borderless">
                     <thead class="text-black">
                         <tr>
-                            <th scope="col">Product Info</th>
+                            <th scope="col">Collection Info</th>
+                            <th scope="col">Delivery Info</th>
                             <th scope="col">Subtotal</th>
                             <th scope="col"></th>
                         </tr>
@@ -43,6 +43,9 @@
                     <tr>
                         <td class="py-3">
                             {% include "store_bag/product-info.html" %}
+                        </td>
+                        <td class="py-3">
+                            
                         </td>
                         <td class="py-3">
                             <p class="my-0">£{{ item.subtotal }}</p>
