--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -6,11 +6,6 @@
 {% endblock %}
 
 
-{% block page_header %}
-{% include 'includes/store-nav.html' %}
-{% endblock %}
-
-
 {% block content %}
 <div class="overlay container"></div>
 <div class="container header-container">
@@ -40,13 +35,6 @@
       {% for item in bag_items %}
       <div class="row">
         <div class="col-2 mb-1">
-          <a href="{% url 'product_detail' item.product.id %}">
-            {% if item.product.image1 %}
-            <img class="w-100" src="{{ item.product.image1_url }}" alt="{{ product.name }}">
-            {% else %}
-            <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-            {% endif %}
-          </a>
         </div>
         <div class="col-7">
           <p class="my-0"><strong>{{ item.product.name }}</strong></p>
@@ -54,7 +42,7 @@
           <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
         </div>
         <div class="col-3 text-right">
-          <p class="my-0 small text-muted">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
+          <p class="my-0 small text-muted">£{{ item.product.price }}</p>
         </div>
       </div>
       {% endfor %}
