--- a/store_bag/templates/store_bag/product-info.html
+++ b/store_bag/templates/store_bag/product-info.html
@@ -1,3 +1,62 @@
-<p class="my-0"><strong>{{ item.product.name }}</strong></p>
-<p class="my-0">{{ item.product.size }}</p>
-<p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+<tr>
+    <td class="pt-3">
+        <p class="my-0 font-italic">{{ item.booking.c_contact_name }}, {{ item.booking.c_company }}</p>
+    </td>
+    <td class="pt-3">
+        <p class="my-0 font-italic">{{ item.booking.d_contact_name }}, {{ item.booking.d_company }}</p>
+    </td>
+</tr>
+<tr>
+    <td class="">
+        <p class="my-0 font-italic">{{ item.booking.c_street_address1 }}</p>
+    </td>
+    <td class="">
+        <p class="my-0 font-italic">{{ item.booking.d_street_address1 }}</p>
+    </td>
+</tr>
+<tr>
+    <td class="">
+        <p class="my-0 font-italic">{{ item.booking.c_street_address2 }}</p>
+    </td>
+    <td class="">
+        <p class="my-0 font-italic">{{ item.booking.d_street_address2 }}</p>
+    </td>
+</tr>
+<tr>
+    <td class="">
+        <p class="my-0 font-italic">{{ item.booking.c_town_or_city }}, {{ item.booking.c_county }}</p>
+    </td>
+    <td class="">
+        <p class="my-0 font-italic">{{ item.booking.d_town_or_city }}, {{ item.booking.d_county }}</p>
+    </td>
+    <td class="">
+        <p class="my-0">£{{ item.subtotal|floatformat:2 }}</p>
+    </td>
+    <td class="">
+        {% include "store_bag/quantity-form.html" %}
+    </td>
+</tr>
+<tr>
+    <td class="">
+        <p class="my-0 font-italic">{{ item.booking.c_postcode }}</p>
+    </td>
+    <td class="">
+        <p class="my-0 font-italic">{{ item.booking.d_postcode }}</p>
+    </td>
+</tr>
+<tr>
+    <td class="">
+        <p class="my-0 font-italic">{{ item.booking.c_phone_number }}</p>
+    </td>
+    <td class="">
+        <p class="my-0 font-italic">{{ item.booking.d_phone_number }}</p>
+    </td>
+</tr>
+<tr>
+    <td class="">
+        <p class="my-0 font-italic">{{ item.booking.c_email }}</p>
+    </td>
+    <td class="">
+        <p class="my-0 font-italic">{{ item.booking.d_email }}</p>
+    </td>
+</tr>
