--- a/store_bag/templates/store_bag/bag.html
+++ b/store_bag/templates/store_bag/bag.html
@@ -38,6 +38,7 @@
                         <tr>
                             <th scope="col">Collection Info</th>
                             <th scope="col">Delivery Info</th>
+                            <th scope="col">Shipment Info</th>
                             <th scope="col">Total</th>
                             <th scope="col"></th>
                         </tr>
@@ -66,6 +67,7 @@
                         <tr>
                             <th scope="col">Collection Info</th>
                             <th scope="col">Delivery Info</th>
+                            <th scope="col">Shipment Info</th>
                             <th scope="col">Total</th>
                             <th scope="col"></th>
                         </tr>
