--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -23,7 +23,7 @@
           <img class="w-100" src="{{ MEDIA_URL }}route.png" alt="{{ item.product.name }}">
         </div>
         <div class="col-9">
-          <p class="my-0"><small>Reference:</small> <strong>{{ item.booking.quote_ref }}</strong></p>
+          <p class="my-0"><small>Reference:</small> <strong>{{ item.booking_ref }}</strong></p>
           <p class="my-0"><small>Collection:</small> <strong>{{ item.booking.c_postcode }}</strong></p>
           <p class="my-0"><small>Delivery: </small><strong>{{ item.booking.d_postcode }}</strong></p>
           <p class="my-0">
