--- a/store_bag/templates/store_bag/product-info.html
+++ b/store_bag/templates/store_bag/product-info.html
@@ -5,6 +5,7 @@
     <td class="pt-3">
         <p class="my-0 font-italic">{{ item.booking.d_contact_name }}, {{ item.booking.d_company }}</p>
     </td>
+    
 </tr>
 <tr>
     <td class="">
@@ -13,6 +14,7 @@
     <td class="">
         <p class="my-0 font-italic">{{ item.booking.d_street_address1 }}</p>
     </td>
+    
 </tr>
 <tr>
     <td class="">
@@ -21,6 +23,7 @@
     <td class="">
         <p class="my-0 font-italic">{{ item.booking.d_street_address2 }}</p>
     </td>
+    
 </tr>
 <tr>
     <td class="">
@@ -30,10 +33,15 @@
         <p class="my-0 font-italic">{{ item.booking.d_town_or_city }}, {{ item.booking.d_county }}</p>
     </td>
     <td class="">
-        <p class="my-0">£{{ item.subtotal|floatformat:2 }}</p>
+        <p class="my-0 font-italic">Actual Weight: {{ item.booking.overall_weight }}</p>
     </td>
     <td class="">
-        {% include "store_bag/quantity-form.html" %}
+        <p class="my-0">£{{ item.subtotal|floatformat:2 }}</p>
+    </td>
+    
+    <td class="">
+        <a class="remove-item text-danger" id="remove_{{ item.booking_ref }}"><i
+            class="far fa-trash-alt fa-2x"></i></a>
     </td>
 </tr>
 <tr>
@@ -43,6 +51,9 @@
     <td class="">
         <p class="my-0 font-italic">{{ item.booking.d_postcode }}</p>
     </td>
+    <td class="">
+        <p class="my-0 font-italic">Volume Weight: {{ item.booking.overall_volume }}</p>
+    </td>
 </tr>
 <tr>
     <td class="">
@@ -50,6 +61,9 @@
     </td>
     <td class="">
         <p class="my-0 font-italic">{{ item.booking.d_phone_number }}</p>
+    </td>
+    <td class="">
+        <p class="my-0 font-italic">Items: {{ item.booking.items }}</p>
     </td>
 </tr>
 <tr>
