--- a/store_bag/templates/store_bag/product-info.html
+++ b/store_bag/templates/store_bag/product-info.html
@@ -7,6 +7,7 @@
     </td>
     
 </tr>
+
 <tr>
     <td class="">
         <p class="my-0 font-italic">{{ item.booking.c_street_address1 }}</p>
@@ -67,10 +68,12 @@
     </td>
 </tr>
 <tr>
-    <td class="">
+    <td>
         <p class="my-0 font-italic">{{ item.booking.c_email }}</p>
     </td>
-    <td class="">
+    <td class="" colspan="5">
         <p class="my-0 font-italic">{{ item.booking.d_email }}</p>
     </td>
 </tr>
+
+<th colspan="5"><hr>
