added media url to last logo

--- a/templates/base.html
+++ b/templates/base.html
@@ -161,7 +161,7 @@
           <img width="300" class="logo-font text-dark my-0 d-none d-lg-block" src="{{ MEDIA_URL }}wilsons-logo-trans.png"
             alt="Wilson's Express">
           <img width="200" class="logo-font text-dark my-0 d-none d-sm-block d-lg-none"
-            src="/media/wilsons-logo-trans.png" alt="Wilson's Express">
+            src="{{ MEDIA_URL }}wilsons-logo-trans.png" alt="Wilson's Express">
           <img width="150" class="logo-font text-dark my-0 d-sm-none d-lg-none" src="{{ MEDIA_URL }}wilsons-logo-trans.png"
             alt="Wilson's Express">
         </a>
