flake8 errors fixed

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -13,7 +13,7 @@
       <ul class="dropdown-menu border-0" aria-labelledby="recieving-link">
         <a href="https://apc-overnight.com/receiving-a-parcel/tracking" target="_blank" rel="noreferrer"
           class="dropdown-item inline-list">Track With APC Pinpoint</a>
-        <a href="https://apc-overnight.com/receiving-a-parcel/re-schedule-delivery/" target="_blank" rel="noreferrer"
+        <a href="https://apccalled.com/" target="_blank" rel="noreferrer"
           class="dropdown-item inline-list">Reschedule with APC Called</a>
       </ul>
     </li>
