more styling to email

--- a/contact_form/templates/contact_form/emails/body.html
+++ b/contact_form/templates/contact_form/emails/body.html
@@ -1,4 +1,5 @@
-<img width="200" src="{{ MEDIA_URL }}wilsons-logo-trans.png" alt="Wilson's Express Website Message">
 <p>Email From: {{ sender_email }}</p>
 <p>Subject: {{ subject }}</p>
 <p>Message: {{ message }}</p>
+<hr>
+<img width="200" src="https://wilsons-express-django.s3.eu-west-2.amazonaws.com/media/wilsons-logo-trans.png" alt="Wilson's Express Website Message">
